--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,3 +54,16 @@ jobs:
         echo "TOOL_NAME: [$TOOL_NAME]"
         echo "TOOL_REPO: [$TOOL_REPO]"
         echo "REGEX: [$REGEX]"
+    - name: Generate tool definitions
+      uses: ./internal/generator
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        tool_name: ${{ fromJSON(toJSON(matrix)).tool_name }}
+        tool_repo: ${{ fromJSON(toJSON(matrix)).tool_repo }}
+        regex: ${{ fromJSON(toJSON(matrix)).regex }}
+        sign_key: ${{ secrets.SIGN_KEY }}
+        sign_passphrase: ${{ secrets.SIGN_PASSPHRASE }}
+        
+        
+        
+        
