--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -65,6 +65,10 @@ jobs:
         regex: ${{ fromJSON(toJSON(matrix)).regex }}
         sign_key: ${{ secrets.SIGN_KEY }}
         sign_passphrase: ${{ secrets.SIGN_PASSPHRASE }}
+    - name: Configure git
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@fortify.com
     - name: Commit updates
       run: | 
         git add . && git commit -m "chore: Update ${{ fromJSON(toJSON(matrix)).tool_name }} cache & resources" \
