--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,6 +60,7 @@ jobs:
         include: ${{ fromJson(needs.setup.outputs.matrix)}}
     steps:
     - uses: actions/checkout@v4
+    - run: git pull
     - name: Check
       env:
         MATRIX: ${{ toJSON(matrix) }}
