--- a/internal/generator/package.json
+++ b/internal/generator/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
