--- a/internal/generator/action.yml
+++ b/internal/generator/action.yml
@@ -32,7 +32,7 @@ inputs:
     required: false
   artifactTypes:
     description: 'JSON string specifying artifact lowercase download URL regex to artifact type mappings {"<regex>": "<type>",..}. Default value: "{".*"="default"}"'
-    default: '{".*"="default"}'
+    default: '{".*": "default"}'
     required: false
 runs:
   using: node20
