--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -156,6 +156,9 @@ jobs:
         # Set last accessed/modified date on yaml files to have same
         # zip output if files themselves haven't changed
         find . -name "*.yaml" -exec touch -a -m -t 197001010000.00 {} \;
+        # Remove the existing zip file, to make sure fixed last modified
+        # dates prevent the zip file from being updated
+        rm -f tool-definitions.yaml.zip
         zip -r tool-definitions.yaml.zip *.yaml
     - uses: stefanzweifel/git-auto-commit-action@v5
       with:
